--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.3",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
+    "react-i18next": "^15.4.0",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.6"
   },
